     playlist. (BR 279263, BR 296090)

  CHANGES:
   * The Jamendo service now uses a higher quality MP3 format instead of Ogg Vorbis.
   * Added an option whether adding tracks to playlist should start playing. (BR 322428)
   * Amarok now depends on Qt 4.8.3.
   * Amarok now uses FindFFMpeg.cmake from kdelibs

  BUGFIXES:
   * Work-around Solid UDisks2 backend bug that caused USB Mass Storage devices and iPods
     not being recognized when connected before Amarok was started. Also fixes a bug where
     blank devices would appear in Play Media dialog. (BR 322980)
   * Definitely fix a bug where storing Last.fm credentials in plain-text isn't offered
     when KWallet is disabled. (BR 315306)
   * Radio streams from scripted services are now instantly playable. (BR 320718)
   * Recently Played List widget now keeps its own time for tracks instead of relying on
     the Last Played statistic. (BR 302485)
   * Prevent hitting an assertion failure if just removed track from the Local Collection
     is edited. (BR 322474)
   * Fixed a regression introduced in 2.8 Beta where tracks in the Local Collection were
     sometimes forgotten and then found again. (BR 322603)
   * Fixed invalid SQL queries when you have files or folders with an apostrophe in
     your collection. (BR 322415)
   * Fixed organizing/copying/moving tracks to Local Collection on Windows. (BR 279560,
     BR 302251)
   * Various usability improvements for the applet toolbar. (BR 197948)
   * Removed broken Apply button in applets' settings dialog. (BR 322015)
   * Fix incorrect colors in Context View toolbar when switching themes. (BR 301305)
   * Many fixes for various bugs with switching desktop color themes at runtime,
     including OSD, spectrum analyzer, collection browser.
   * Avoid updating the MPRIS2 Metadata between tracks. (BR 321602)


VERSION 2.8-Beta 1
  FEATURES:
   * Ctrl+C copies the currently playing artist & title to the clipboard. (BR 228872)