@@ -15,6 +15,9 @@ VERSION 2.8
    * Amarok now uses FindFFMpeg.cmake from kdelibs
 
   BUGFIXES:
+   * Jamendo service: Albums are now downloaded directly instead of going via
+     BitTorrent. This is far more reliable and also supports on-the-fly transcoding.
+     (BR 299434)
    * Work-around Solid UDisks2 backend bug that caused USB Mass Storage devices and iPods
      not being recognized when connected before Amarok was started. Also fixes a bug where
      blank devices would appear in Play Media dialog. (BR 322980)
